target/generated-sources/javacc/com/utesa/compilador/mycode/syntax/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package com.utesa.compilador.mycode.syntax;

import java.util.List;
import java.util.ArrayList;
import java.io.Reader;
import com.utesa.compilador.util.Log;
import com.utesa.compilador.entities.*;

public class Parser implements ParserConstants {
    public Program parse(Reader reader, Log log) {
        try {
            return parseProgram();
        } catch (TokenMgrError e) {
            log.exception(e);
            return null;
        } catch (ParseException e) {
            log.exception(e);
            return null;
        }
    }

// ---------------------------------------------------------------------------
// SYNTAX ANALYZER
// ---------------------------------------------------------------------------
  final public Program parseProgram() throws ParseException {
    List<Statement> statements = new ArrayList<Statement>();
    Statement s;
    label_1:
    while (true) {
      s = parseStmt();
                       statements.add(s);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
      case 7:
      case 8:
      case 10:
      case 11:
      case 12:
      case 13:
      case 14:
      case 16:
      case 17:
      case 19:
      case 20:
      case 24:
      case 55:
      case 56:
      case ID:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
     {if (true) return new Program(statements);}
    throw new Error("Missing return statement in function");
  }

  final public Declarable parseDec() throws ParseException {
    Declarable d;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 14:
      d = parseTypeDec();
      break;
    default:
      jj_la1[1] = jj_gen;
      if (jj_2_1(2147483647)) {
        d = parseFunDec();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 6:
        case 10:
        case 13:
        case 17:
        case 19:
        case ID:
          d = parseVarDec();
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
     {if (true) return d;}
    throw new Error("Missing return statement in function");
  }

  final public Type parseTypeDec() throws ParseException {
    Token s;
    String t;
    Token f;
    List<StructField> fields = new ArrayList<StructField>();
    jj_consume_token(14);
    s = jj_consume_token(ID);
    jj_consume_token(32);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
      case 10:
      case 13:
      case 17:
      case 19:
      case ID:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      t = parseType();
      f = jj_consume_token(ID);
      jj_consume_token(27);
         fields.add(new StructField(f.image, t));
    }
    jj_consume_token(33);
     {if (true) return new StructType(s.image, fields);}
    throw new Error("Missing return statement in function");
  }

  final public String parseType() throws ParseException {
    Token i;
    StringBuilder builder = new StringBuilder();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 6:
      i = jj_consume_token(6);
      break;
    case 13:
      i = jj_consume_token(13);
      break;
    case 10:
      i = jj_consume_token(10);
      break;
    case 17:
      i = jj_consume_token(17);
      break;
    case 19:
      i = jj_consume_token(19);
      break;
    case ID:
      i = jj_consume_token(ID);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     builder.append(i.image);
    label_3:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(30);
      jj_consume_token(31);
                              builder.append("[]");
    }
     {if (true) return builder.toString();}
    throw new Error("Missing return statement in function");
  }

  final public Variable parseVarDec() throws ParseException {
    String t;
    Token v;
    Expression e = null;
    t = parseType();
    v = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 34:
      jj_consume_token(34);
      e = parseExp();
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(27);
     {if (true) return new Variable(v.image, t, e);}
    throw new Error("Missing return statement in function");
  }

  final public Function parseFunDec() throws ParseException {
    String r;
    Token n;
    String t;
    Token p;
    List<Variable> params = new ArrayList<Variable>();
    Block body;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 6:
    case 10:
    case 13:
    case 17:
    case 19:
    case ID:
      r = parseType();
      break;
    case 20:
      jj_consume_token(20);
                               r = "void";
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    n = jj_consume_token(ID);
    jj_consume_token(28);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 6:
    case 10:
    case 13:
    case 17:
    case 19:
    case ID:
      t = parseType();
      p = jj_consume_token(ID);
         params.add(new Variable(p.image, t, null));
      label_4:
      while (true) {
        if (jj_2_3(2)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(26);
        t = parseType();
        p = jj_consume_token(ID);
             params.add(new Variable(p.image, t, null));
      }
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(29);
    body = parseBlock();
     {if (true) return new Function(r, n.image, params, body);}
    throw new Error("Missing return statement in function");
  }

  final public Block parseBlock() throws ParseException {
    List<Statement> statements = new ArrayList<Statement>();
    Statement s;
    jj_consume_token(32);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
      case 7:
      case 8:
      case 10:
      case 11:
      case 12:
      case 13:
      case 14:
      case 16:
      case 17:
      case 19:
      case 20:
      case 24:
      case 55:
      case 56:
      case ID:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
      s = parseStmt();
                       statements.add(s);
    }
    jj_consume_token(33);
     {if (true) return new Block(statements);}
    throw new Error("Missing return statement in function");
  }

  final public Statement parseStmt() throws ParseException {
    Declarable d;
    Expression e = null, e1 = null, e2 = null;
    Statement s = null;
    Block b = null;
    Block elseBlock = null;
    Token i = null;
    String t = null;
    List<Expression> args = new ArrayList<Expression>();
    List<Case> cases = new ArrayList<Case>();
    if (jj_2_5(2147483647)) {
      d = parseDec();
     {if (true) return new Declaration(d);}
    } else if (jj_2_6(2147483647)) {
      s = parseAssignment();
      jj_consume_token(27);
     {if (true) return s;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        s = parseCallStatement();
        jj_consume_token(27);
     {if (true) return s;}
        break;
      case 8:
        jj_consume_token(8);
        jj_consume_token(27);
     {if (true) return new BreakStatement();}
        break;
      case 12:
        jj_consume_token(12);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 10:
        case 13:
        case 15:
        case 18:
        case 19:
        case 21:
        case 22:
        case 23:
        case 28:
        case 43:
        case 45:
        case 52:
        case 55:
        case 56:
        case INTLIT:
        case FLOATLIT:
        case CHARLIT:
        case STRINGLIT:
        case ID:
          e = parseExp();
          break;
        default:
          jj_la1[9] = jj_gen;
          ;
        }
        jj_consume_token(27);
     {if (true) return new ReturnStatement(e);}
        break;
      case 24:
        jj_consume_token(24);
        args = parseArgs();
        jj_consume_token(27);
     {if (true) return new PrintStatement(args);}
        break;
      case 7:
        jj_consume_token(7);
        e = parseExp();
        b = parseBlock();
     cases.add(new Case(e, b));
        label_6:
        while (true) {
          if (jj_2_4(2)) {
            ;
          } else {
            break label_6;
          }
          jj_consume_token(9);
          jj_consume_token(7);
          e = parseExp();
          b = parseBlock();
         cases.add(new Case(e, b));
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 9:
          jj_consume_token(9);
          elseBlock = parseBlock();
          break;
        default:
          jj_la1[10] = jj_gen;
          ;
        }
     {if (true) return new IfStatement(cases, elseBlock);}
        break;
      case 16:
        jj_consume_token(16);
        e = parseExp();
        b = parseBlock();
     {if (true) return new WhileStatement(e, b);}
        break;
      default:
        jj_la1[14] = jj_gen;
        if (jj_2_7(2)) {
          jj_consume_token(11);
          jj_consume_token(28);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 6:
          case 10:
          case 13:
          case 17:
          case 19:
          case ID:
            t = parseType();
            i = jj_consume_token(ID);
            jj_consume_token(34);
            e1 = parseExp();
            break;
          default:
            jj_la1[11] = jj_gen;
            ;
          }
          jj_consume_token(27);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 10:
          case 13:
          case 15:
          case 18:
          case 19:
          case 21:
          case 22:
          case 23:
          case 28:
          case 43:
          case 45:
          case 52:
          case 55:
          case 56:
          case INTLIT:
          case FLOATLIT:
          case CHARLIT:
          case STRINGLIT:
          case ID:
            e2 = parseExp();
            break;
          default:
            jj_la1[12] = jj_gen;
            ;
          }
          jj_consume_token(27);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 55:
          case 56:
          case ID:
            s = parseAssignment();
            break;
          default:
            jj_la1[13] = jj_gen;
            ;
          }
          jj_consume_token(29);
          b = parseBlock();
     {if (true) return new ClassicForStatement(t, i==null?null:i.image, e1, e2, s, b);}
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Statement parseAssignment() throws ParseException {
    VariableExpression v;
    Expression e = null;
    Statement s;
    if (jj_2_8(2147483647)) {
      s = parseIncrementStatement();
     {if (true) return s;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        v = parseVar();
        jj_consume_token(34);
        e = parseExp();
     {if (true) return new AssignmentStatement(v, e);}
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Statement parseIncrementStatement() throws ParseException {
    String op;
    VariableExpression v;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 55:
    case 56:
      op = parseIncop();
      v = parseVar();
      break;
    case ID:
      v = parseVar();
      op = parseIncop();
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new IncrementStatement(v, op);}
    throw new Error("Missing return statement in function");
  }

  final public Statement parseCallStatement() throws ParseException {
    Token i;
    List<Expression> args;
    i = jj_consume_token(ID);
    jj_consume_token(28);
    args = parseArgs();
    jj_consume_token(29);
     {if (true) return new CallStatement(i.image, args);}
    throw new Error("Missing return statement in function");
  }

  final public Expression parseExp() throws ParseException {
    Expression e1;
    Expression e2;
    e1 = parseExp1();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 41:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_7;
      }
      jj_consume_token(41);
      e2 = parseExp1();
                            e1 = new InfixExpression(e1, "||", e2);
    }
     {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Expression parseExp1() throws ParseException {
    Expression e1;
    Expression e2;
    e1 = parseExp2();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 42:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_8;
      }
      jj_consume_token(42);
      e2 = parseExp2();
                            e1 = new InfixExpression(e1, "&&", e2);
    }
     {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Expression parseExp2() throws ParseException {
    Expression e1;
    Expression e2;
    e1 = parseExp3();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 49:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_9;
      }
      jj_consume_token(49);
      e2 = parseExp3();
                           e1 = new InfixExpression(e1, "|", e2);
    }
     {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Expression parseExp3() throws ParseException {
    Expression e1;
    Expression e2;
    e1 = parseExp4();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 50:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_10;
      }
      jj_consume_token(50);
      e2 = parseExp4();
                           e1 = new InfixExpression(e1, "^", e2);
    }
     {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Expression parseExp4() throws ParseException {
    Expression e1;
    Expression e2;
    e1 = parseExp5();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 51:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_11;
      }
      jj_consume_token(51);
      e2 = parseExp5();
                           e1 = new InfixExpression(e1, "&", e2);
    }
     {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Expression parseExp5() throws ParseException {
    String op;
    Expression e1;
    Expression e2;
    e1 = parseExp6();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 35:
    case 36:
    case 37:
    case 38:
    case 39:
    case 40:
      op = parseRelop();
      e2 = parseExp6();
                                         e1 = new InfixExpression(e1, op, e2);
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
     {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Expression parseExp6() throws ParseException {
    String op;
    Expression e1;
    Expression e2;
    e1 = parseExp7();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 53:
      case 54:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_12;
      }
      op = parseShiftop();
      e2 = parseExp7();
                                           e1 = new InfixExpression(e1, op, e2);
    }
     {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Expression parseExp7() throws ParseException {
    String op;
    Expression e1;
    Expression e2;
    e1 = parseExp8();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 44:
      case 45:
        ;
        break;
      default:
        jj_la1[24] = jj_gen;
        break label_13;
      }
      op = parseAddop();
      e2 = parseExp8();
                                         e1 = new InfixExpression(e1, op, e2);
    }
     {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Expression parseExp8() throws ParseException {
    String op;
    Expression e1;
    Expression e2;
    e1 = parseExp9();
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 46:
      case 47:
      case 48:
        ;
        break;
      default:
        jj_la1[25] = jj_gen;
        break label_14;
      }
      op = parseMulop();
      e2 = parseExp9();
                                         e1 = new InfixExpression(e1, op, e2);
    }
     {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  final public Expression parseExp9() throws ParseException {
    String op = null;
    Expression e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 10:
    case 13:
    case 19:
    case 23:
    case 43:
    case 45:
    case 52:
      op = parsePrefixop();
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
    e = parseExp10();
     {if (true) return op == null ? e : new PrefixExpression(op, e);}
    throw new Error("Missing return statement in function");
  }

  final public Expression parseExp10() throws ParseException {
    Expression e;
    if (jj_2_9(2)) {
      e = parseLiteral();
     {if (true) return e;}
    } else if (jj_2_10(2147483647)) {
      e = parseIncrementExpression();
     {if (true) return e;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        e = parseVar();
     {if (true) return e;}
        break;
      case 22:
        e = parseNewObject();
     {if (true) return e;}
        break;
      case 28:
        jj_consume_token(28);
        e = parseExp();
        jj_consume_token(29);
     {if (true) return e;}
        break;
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Literal parseLiteral() throws ParseException {
    Token i;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 15:
      jj_consume_token(15);
            {if (true) return Literal.NULL;}
      break;
    case 18:
      jj_consume_token(18);
            {if (true) return BooleanLiteral.TRUE;}
      break;
    case 21:
      jj_consume_token(21);
             {if (true) return BooleanLiteral.FALSE;}
      break;
    case INTLIT:
      i = jj_consume_token(INTLIT);
                {if (true) return new IntegerLiteral(i.image);}
      break;
    case FLOATLIT:
      i = jj_consume_token(FLOATLIT);
                  {if (true) return new RealLiteral(i.image);}
      break;
    case CHARLIT:
      i = jj_consume_token(CHARLIT);
                 {if (true) return new CharLiteral(i.image);}
      break;
    case STRINGLIT:
      i = jj_consume_token(STRINGLIT);
                   {if (true) return new StringLiteral(i.image);}
      break;
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }
